@startuml
title Diagrama de Clases - Motor DSS\nCAMPO LOGÍSTICA TARIJA DSS

skinparam shadowing false
skinparam classAttributeIconSize 0

package "Esquema oltp - Entidades Operacionales" {

class Pedido {
  -id: Long
  -codigo: String
  -fechaRegistro: DateTime
  -fechaLimite: DateTime
  -estado: EstadoPedido
  -urgencia: SmallInt
  -pesoKg: Decimal
  +actualizarEstado()
}

class Cliente {
  -id: Long
  -nombre: String
  -telefono: String
}

class Ubicacion {
  -id: Long
  -direccion: String
  -zona: String
  -latitud: Decimal
  -longitud: Decimal
}

class Conductor {
  -id: Long
  -nombre: String
  -disponible: Boolean
  +estaDisponible(): Boolean
}

class Vehiculo {
  -id: Long
  -placa: String
  -capacidadKg: Decimal
  -rendimientoKmLitro: Decimal
  -disponible: Boolean
  +validarCapacidad(peso: Decimal): Boolean
}

}

package "Esquema oltp - Motor DSS" {

class CriterioDecision {
  -id: Long
  -nombre: String
  -peso: Decimal
  -valorNormalizado: Decimal
  +normalizar(): Decimal
}

class AlternativaAsignacion {
  -id: Long
  -distanciaKm: Decimal
  -combustibleLitros: Decimal
  -riesgoRetraso: Decimal
  -puntuacion: Decimal
  -valida: Boolean
  +calcularPuntuacion(): Decimal
  +validarRestriccionesDuras(): Boolean
}

class EvaluacionDSS {
  -id: Long
  -fecha: DateTime
  -indicePrioridad: Decimal
  -nivelPrioridad: String
  +calcularPrioridad(): Decimal
  +compararAlternativas()
}

class RecomendacionDSS {
  -id: Long
  -puntuacionFinal: Decimal
  -explicacion: String
  -impactoKm: Decimal
  -impactoCombustible: Decimal
  -impactoRiesgo: Decimal
  +generarExplicacion(): String
}

}

package "Esquema oltp - Trazabilidad" {

class HistorialDecision {
  -id: Long
  -fecha: DateTime
  -usuario: String
  -decisionTomada: String
  -alternativaSeleccionada: Long
  +registrarDecision()
}

}

Cliente "1" -- "0..*" Pedido
Pedido "1" *-- "1" Ubicacion

Pedido "1" -- "0..*" EvaluacionDSS

EvaluacionDSS "1" *-- "1..*" CriterioDecision
EvaluacionDSS "1" *-- "2..*" AlternativaAsignacion

AlternativaAsignacion "*" --> "1" Conductor
AlternativaAsignacion "*" --> "1" Vehiculo

EvaluacionDSS "1" --> "0..1" RecomendacionDSS
RecomendacionDSS "1" --> "1" AlternativaAsignacion

RecomendacionDSS "1" --> "0..1" HistorialDecision

note right of EvaluacionDSS
HU-04:
Calcula prioridad y evalúa criterios.
Pesos base congelados:
- Urgencia: 30%
- Riesgo de retraso: 25%
- Eficiencia de distancia: 20%
- Eficiencia de combustible: 15%
- Disponibilidad/capacidad: 10%
Total = 100%. Escala: 0 a 100.
end note

note right of AlternativaAsignacion
HU-08:
Compara alternativas.
Restricciones duras (exclusión previa):
1. Conductor disponible
2. Vehículo disponible
3. Capacidad suficiente
4. Pedido asignable
Una alternativa que incumpla se excluye.
end note

note right of RecomendacionDSS
HU-09:
Genera recomendación explicable.
La decisión final pertenece
siempre al Responsable Logístico.
end note

@enduml